edited swagger documentation for users api
